Add stamina, passing, and player switching mechanics

--- a/index.html
+++ b/index.html
@@ -16,8 +16,15 @@
       <div class="controls">
         <p>
           Irányítás: <kbd>W</kbd> <kbd>A</kbd> <kbd>S</kbd> <kbd>D</kbd> – mozgás,
-          <kbd>Space</kbd> – lövés / passz
+          <kbd>Space</kbd> – lövés, <kbd>F</kbd> – passz, <kbd>Shift</kbd> – sprint,
+          <kbd>Q</kbd> – legközelebbi játékos átvétele
         </p>
+      </div>
+      <div class="stamina-meter">
+        <span>Állóképesség</span>
+        <div class="bar">
+          <div class="fill" id="stamina-fill"></div>
+        </div>
       </div>
     </div>
     <canvas id="pitch" width="1200" height="720"></canvas>
