Add HUD versioning, controller input, and smarter AI

--- a/index.html
+++ b/index.html
@@ -12,12 +12,19 @@
         <span class="team home">Hazai: <strong id="home-score">0</strong></span>
         <span class="time" id="match-time">00:00</span>
         <span class="team away">Vendég: <strong id="away-score">0</strong></span>
+        <span class="version" id="game-version">v1.4.0</span>
       </div>
+      <div class="possession" id="possession-meter">Birtoklás: 50% - 50%</div>
       <div class="controls">
         <p>
-          Irányítás: <kbd>W</kbd> <kbd>A</kbd> <kbd>S</kbd> <kbd>D</kbd> – mozgás,
+          Billentyűzet: <kbd>W</kbd> <kbd>A</kbd> <kbd>S</kbd> <kbd>D</kbd> – mozgás,
           <kbd>Space</kbd> – lövés, <kbd>F</kbd> – passz, <kbd>Shift</kbd> – sprint,
           <kbd>Q</kbd> – legközelebbi játékos átvétele
+        </p>
+        <p>
+          Xbox Series kontroller: <span class="chip">Bal kar</span> – mozgás,
+          <span class="chip">RT</span> – sprint, <span class="chip">A</span> – lövés,
+          <span class="chip">B</span> – passz, <span class="chip">LB</span> – játékos váltás
         </p>
       </div>
       <div class="stamina-meter">
