Improve dribbling, inputs, and mobile layout

--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@
         <span class="team home">Hazai: <strong id="home-score">0</strong></span>
         <span class="time" id="match-time">00:00</span>
         <span class="team away">Vendég: <strong id="away-score">0</strong></span>
-        <span class="version" id="game-version">v1.8.0</span>
+        <span class="version" id="game-version">v1.9.0</span>
         <button class="hud-btn menu-toggle-btn" id="menu-toggle-btn" type="button">Menü</button>
         <button class="hud-btn fullscreen-btn" id="fullscreen-btn" type="button">Teljes képernyő</button>
       </div>
       <div class="possession" id="possession-meter">Birtoklás: 50% - 50%</div>
       <div class="controls">
-        <p>
-          Billentyűzet: <kbd>W</kbd> <kbd>A</kbd> <kbd>S</kbd> <kbd>D</kbd> – mozgás,
-          <kbd>Space</kbd> – lövés, <kbd>F</kbd> – passz, <kbd>Shift</kbd> – sprint,
-          <kbd>Q</kbd> – legközelebbi játékos átvétele, <kbd>Esc</kbd> – menü
-        </p>
+          <p>
+            Billentyűzet: <kbd>W</kbd> <kbd>A</kbd> <kbd>S</kbd> <kbd>D</kbd> – mozgás,
+            <kbd>Space</kbd>/<kbd>K</kbd>/<kbd>L</kbd> – lövés, <kbd>F</kbd>/<kbd>J</kbd>/<kbd>X</kbd> – passz,
+            <kbd>Shift</kbd> – sprint, <kbd>Q</kbd> – legközelebbi játékos átvétele,
+            <kbd>Esc</kbd> – menü
+          </p>
         <p>
           Xbox Series kontroller: <span class="chip">Bal kar</span> – mozgás,
           <span class="chip">RT / RB</span> – sprint, <span class="chip">A</span> – passz,
@@ -45,7 +46,7 @@
     <div class="menu-overlay visible" id="main-menu" data-mode="intro">
       <div class="menu-card">
         <h1>Kickoff</h1>
-        <p class="menu-version">Verzió <span id="menu-version">v1.8.0</span></p>
+        <p class="menu-version">Verzió <span id="menu-version">v1.9.0</span></p>
         <p class="menu-subtitle" data-mode="intro">
           Koppints vagy nyomd meg a <strong>Meccs indítása</strong> gombot, ha készen állsz a
           kezdésre.
@@ -64,9 +65,9 @@
         <div class="menu-patchnotes">
           <h2>Patch notes</h2>
           <ul>
-            <li>Lassabb tempó, feszesebb labdakezelés – a passzok és lövések most tényleg elsülnek.</li>
-            <li>Hagyományos Xbox gombkiosztás, érintéses és billentyűs menüvezérlés.</li>
-            <li>Megújult főmenü, mobilbarát teljes képernyő mód és megbízhatóbb pályaelrendezés.</li>
+            <li>Az irányított játékosnál marad a labda egészen addig, amíg az ellenfél el nem lopja.</li>
+            <li>Billentyűzeten több gombbal is passzolhatsz/lőhetsz, kontrolleren finomabb tempóval játszhatsz.</li>
+            <li>Mobilon kompaktabb joystick és gombok takarják kevésbé a pályát ál-teljes képernyőben.</li>
           </ul>
         </div>
       </div>
